--- a/src/contact.html
+++ b/src/contact.html
@@ -89,7 +89,7 @@
                     </div>
                     <div class="flex gap-2">
                         <button
-                            class="lg:w-6/12 lg:p-1 bg-blue-50 text-blue-600 h-14 w-11/12 border items-center justify-center flex gap-1 p-2 text-lg font-semibold rounded-md"
+                            class="lg:w-6/12 lg:p-1 h-14 w-11/12 border items-center justify-center flex gap-1 shadow-sm p-2 text-lg font-semibold rounded-md"
                             type="button">Hire
                             me <span class="material-symbols-outlined">message</span> </button>
                         <button
@@ -98,26 +98,30 @@
                     </div>
                     <div class="flex gap-3">
                         <a href="https://github.com/safikumar00">
-                            <div class="p-2 border shadow-sm rounded-md w-12 h-12 grid items-center justify-center text-center">
+                            <div
+                                class="p-2 border shadow-sm rounded-md w-12 h-12 grid items-center justify-center text-center">
                                 <i class="social-links fa fa-github"></i>
                             </div>
                         </a>
                         <a href="https://codepen.io/safikumar00">
-                            <div class="p-2 border shadow-sm rounded-md w-12 h-12 grid items-center justify-center text-center">
+                            <div
+                                class="p-2 border shadow-sm rounded-md w-12 h-12 grid items-center justify-center text-center">
                                 <i class="social-links fa fa-codepen"></i>
 
                             </div>
                         </a>
                         <a href="https://www.linkedin.com/in/sunil-kumar-ab0a9b24b/">
-                            <div class="p-2 border shadow-sm rounded-md w-12 h-12 grid items-center justify-center text-center">
+                            <div
+                                class="p-2 border shadow-sm rounded-md w-12 h-12 grid items-center justify-center text-center">
                                 <i class="social-links fa fa-linkedin"></i>
 
                             </div>
                         </a>
                         <a href="https://www.behance.net/8fc59bees">
-                            <div class="p-2 border shadow-sm rounded-md w-12 h-12 grid items-center justify-center text-center">
+                            <div
+                                class="p-2 border shadow-sm rounded-md w-12 h-12 grid items-center justify-center text-center">
                                 <i class="social-links fa fa-behance"></i>
-    
+
                             </div>
                         </a>
                     </div>
