--- a/src/index.html
+++ b/src/index.html
@@ -195,7 +195,7 @@
             class="grid grid-cols-2 gap-4 md:grid-cols-3 overflow-y-scroll [&::-webkit-scrollbar]:w-1 [&::-webkit-scrollbar-track]:rounded-full [&::-webkit-scrollbar-track]:bg-gray-100 [&::-webkit-scrollbar-thumb]:rounded-full [&::-webkit-scrollbar-thumb]:bg-gray-300 h-96 max-h-52 rounded-xl ">
             <div class="text-center">
               <div class="grid place-content-center rounded-lg bg-light p-1 dark:bg-dark-2">
-                <img src="./assets/images/figma.jpg" alt="" class="h-12 w-12 rounded-md">
+                <img src="./assets/images/tools/figma.jpg" alt="" class="h-12 w-12 rounded-md">
               </div>
               <p class="mt-1 text-base font-medium text-dark">
                 Figma
@@ -203,7 +203,7 @@
             </div>
             <div class="text-center">
               <div class="grid place-content-center rounded-lg bg-light p-1 dark:bg-dark-2">
-                <img src="./assets/images/illustrator.jpg" alt="" class="h-12 w-12 rounded-md">
+                <img src="./assets/images/tools/illustrator.jpg" alt="" class="h-12 w-12 rounded-md">
               </div>
               <p class="mt-1 text-base font-medium text-dark">
                 Adobe illustrator
@@ -211,7 +211,7 @@
             </div>
             <div class="text-center">
               <div class="grid place-content-center rounded-lg bg-light p-1 dark:bg-dark-2">
-                <img src="./assets/images/photoshop.jpg" alt="" class="h-12 w-12 rounded-md">
+                <img src="./assets/images/tools/photoshop.jpg" alt="" class="h-12 w-12 rounded-md">
               </div>
               <p class="mt-1 text-base font-medium text-dark">
                 Adobe Photoshop
@@ -219,7 +219,7 @@
             </div>
             <div class="text-center">
               <div class="grid place-content-center rounded-lg bg-light p-1 dark:bg-dark-2">
-                <img src="./assets/images/html_logo.jpg" alt="" class="h-12 w-12 rounded-md">
+                <img src="./assets/images/tools/html_logo.jpg" alt="" class="h-12 w-12 rounded-md">
               </div>
               <p class="mt-1 text-base font-medium text-dark">
                 HTML
@@ -227,7 +227,7 @@
             </div>
             <div class="text-center">
               <div class="grid place-content-center rounded-lg bg-light p-1 dark:bg-dark-2">
-                <img src="./assets/images/css_logo.svg" alt="" class="h-12 w-12 rounded-md">
+                <img src="./assets/images/tools/css_logo.svg" alt="" class="h-12 w-12 rounded-md">
               </div>
               <p class="mt-1 text-base font-medium text-dark">
                 CSS
@@ -235,7 +235,7 @@
             </div>
             <div class="text-center">
               <div class="grid place-content-center rounded-lg bg-light p-1 dark:bg-dark-2">
-                <img src="./assets/images/js_logo.jpg" alt="" class="h-12 w-12 rounded-md">
+                <img src="./assets/images/tools/js_logo.jpg" alt="" class="h-12 w-12 rounded-md">
               </div>
               <p class="mt-1 text-base font-medium text-dark">
                 JScript
@@ -243,7 +243,7 @@
             </div>
             <div class="text-center">
               <div class="grid place-content-center rounded-lg bg-light p-1 dark:bg-dark-2">
-                <img src="./assets/images/tailwindcsss.jpg" alt="" class="h-12 w-12 rounded-md">
+                <img src="./assets/images/tools/tailwindcsss.jpg" alt="" class="h-12 w-12 rounded-md">
               </div>
               <p class="mt-1 text-base font-medium text-dark">
                 TailWind CSS
@@ -251,7 +251,7 @@
             </div>
             <div class="text-center">
               <div class="grid place-content-center rounded-lg bg-light p-1 dark:bg-dark-2">
-                <img src="./assets/images/Bootstrap_logo.jpg" alt="" class="h-12 w-12 rounded-md">
+                <img src="./assets/images/tools/Bootstrap_logo.jpg" alt="" class="h-12 w-12 rounded-md">
               </div>
               <p class="mt-1 text-base font-medium text-dark">
                 BootStrap
@@ -259,7 +259,7 @@
             </div>
             <div class="text-center">
               <div class="grid place-content-center rounded-lg bg-light p-1 dark:bg-dark-2">
-                <img src="./assets/images/jquery_logo.jpg" alt="" class="h-12 w-12 rounded-md">
+                <img src="./assets/images/tools/tools/jquery_logo.jpg" alt="" class="h-12 w-12 rounded-md">
               </div>
               <p class="mt-1 text-base font-medium text-dark">
                 JQuery
@@ -267,7 +267,7 @@
             </div>
             <div class="text-center">
               <div class="grid place-content-center rounded-lg bg-light p-1 dark:bg-dark-2">
-                <img src="./assets/images/after_effects.jpg" alt="" class="h-12 w-12 rounded-md">
+                <img src="./assets/images/tools/after_effects.jpg" alt="" class="h-12 w-12 rounded-md">
               </div>
               <p class="mt-1 text-base font-medium text-dark">
                 After Effects
@@ -275,7 +275,7 @@
             </div>
             <div class="text-center">
               <div class="grid place-content-center rounded-lg bg-light p-1 dark:bg-dark-2">
-                <img src="./assets/images/canva.jpg" alt="" class="h-12 w-12 rounded-md">
+                <img src="./assets/images/tools/canva.jpg" alt="" class="h-12 w-12 rounded-md">
               </div>
               <p class="mt-1 text-base font-medium text-dark">
                 Canva
@@ -410,7 +410,7 @@
           <a href="https://turbopaisa.com/"><img src="./assets/images/brand-logos/8.png" alt=""
               class="p-1 border h-24 shadow-lg inline-flex rounded-lg mx-3 bg-gray-500"></a>
           <a href="https://salesera.net/"><img src="./assets/images/brand-logos/9.png" alt=""
-              class="p-1 border h-24 shadow-lg inline-flex rounded-lg mx-3 bg-gray-500"></a>
+              class="p-1 border h-24 shadow-lg inline-flex rounded-lg mx-3 "></a>
           <a href="https://www.dreamrupee.com "><img src="./assets/images/brand-logos/1.png" alt=""
               class="p-1 border h-24 shadow-lg inline-flex rounded-lg mx-3"></a>
           <a href="https://www.keytoloans.com"><img src="./assets/images/brand-logos/2.png" alt=""
@@ -426,7 +426,7 @@
           <a href="https://turbopaisa.com/"><img src="./assets/images/brand-logos/8.png" alt=""
               class="p-1 border h-24 shadow-lg inline-flex rounded-lg mx-3 bg-gray-500"></a>
           <a href="https://salesera.net/"><img src="./assets/images/brand-logos/9.png" alt=""
-              class="p-1 border h-24 shadow-lg inline-flex rounded-lg mx-3 bg-gray-500"></a>
+              class="p-1 border h-24 shadow-lg inline-flex rounded-lg mx-3 "></a>
         </marquee>
 
       </div>
