--- a/src/about.html
+++ b/src/about.html
@@ -20,6 +20,13 @@
         .custom-font {
             font-family: "Lexend", sans-serif;
         }
+
+        @media screen and (max-width: 768px) {
+            main>div {
+                justify-content: center;
+                align-items: center;
+            }
+        }
     </style>
 
 </head>
@@ -61,10 +68,9 @@
                 class="hs-collapse hidden overflow-hidden transition-all duration-300 basis-full grow sm:grow-0 sm:basis-auto sm:block sm:order-2"
                 aria-labelledby="hs-navbar-alignment-collapse">
                 <div class="flex flex-col gap-5 mt-5 sm:flex-row sm:items-center sm:mt-0 custom-font sm:ps-5 ">
-                    <a class="font-medium text-lg text-blue-500 focus:outline-none " href="index.html"
-                        aria-current="page">Home</a>
-                    <a class="font-medium text-lg  text-gray-400 hover:text-gray-600 focus:text-gray-400 focus:outline-none"
-                        href="about.html">About</a>
+                    <a class="font-medium text-lg text-gray-400 hover:text-gray-600 focus:text-gray-400 focus:outline-none "
+                        href="index.html" aria-current="page">Home</a>
+                    <a class="font-medium text-lg   text-blue-500  focus:outline-none" href="about.html">About</a>
                     <a class="font-medium text-lg text-gray-400 hover:text-gray-600 focus:outline-none focus:text-gray-400"
                         href="projects.html">Projects</a>
                     <a class="font-medium text-lg text-gray-400 hover:text-gray-600 focus:outline-none focus:text-gray-400"
@@ -76,7 +82,7 @@
     </header>
 
     <main class="container mx-auto my-6 lg:h-[92vh] lg:overflow-hidden">
-        <div class="grid grid-cols-1 lg:grid-cols-3 gap-6 h-full">
+        <div class="lg:grid flex flex-col grid-cols-3 gap-6 h-full">
             <div class="bg-white p-6 grid gap-3 shadow rounded-2xl">
                 <div class=" flex flex-col gap-6 ">
                     <img src="./assets/images/hero.jpg" class="w-full rounded-lg" alt="">
@@ -128,7 +134,7 @@
                 </div>
             </div>
             <div
-                class=" bg-white grid border rounded-2xl grid-rows-2 col-span-2 h-fit lg:h-auto gap-6 lg:overflow-y-scroll overflow-x-hidden overflow-y-scroll [&::-webkit-scrollbar]:w-1 [&::-webkit-scrollbar-track]:rounded-full [&::-webkit-scrollbar-track]:bg-gray-100 [&::-webkit-scrollbar-thumb]:rounded-full [&::-webkit-scrollbar-thumb]:bg-gray-300">
+                class=" bg-white grid border rounded-2xl col-span-2 h-fit lg:h-auto gap-6 lg:overflow-y-scroll overflow-x-hidden overflow-y-scroll [&::-webkit-scrollbar]:w-1 [&::-webkit-scrollbar-track]:rounded-full [&::-webkit-scrollbar-track]:bg-gray-100 [&::-webkit-scrollbar-thumb]:rounded-full [&::-webkit-scrollbar-thumb]:bg-gray-300">
                 <div class="bg-white p-6 gap-6 grid shadow rounded-2xl h-fit">
                     <div class="flex flex-col-reverse items-start gap-6 lg:flex-row lg:gap-10">
                         <div class="">
@@ -259,23 +265,23 @@
                         <h3 class="text-2xl font-bold text-dark">
                             Brands I Have Worked With
                         </h3>
-                        <div class="grid grid-cols-2 lg:grid-cols-3 gap-6">
+                        <div class="grid grid-cols-2 lg:grid-cols-3 gap-3 lg:gap-6">
                             <a href="https://www.dreamrupee.com "><img src="./assets/images/brand-logos/1.png" alt=""
-                                    class="p-1 border h-24 shadow-md inline-flex rounded-lg mx-3"></a>
+                                    class="p-1 border h-24 shadow-md inline-flex rounded-lg lg:mx-3"></a>
                             <a href="https://www.keytoloans.com"><img src="./assets/images/brand-logos/2.png" alt=""
-                                    class="p-1 border h-24 shadow-md inline-flex rounded-lg mx-3"></a>
+                                    class="p-1 border h-24 shadow-md inline-flex rounded-lg lg:mx-3"></a>
                             <a href="https://www.lendingind.com/"><img src="./assets/images/brand-logos/4.png" alt=""
-                                    class="p-1 border h-24 shadow-md inline-flex rounded-lg mx-3"></a>
+                                    class="p-1 border h-24 shadow-md inline-flex rounded-lg lg:mx-3"></a>
                             <a href="https://www.lowcredit.in/"><img src="./assets/images/brand-logos/5.png" alt=""
-                                    class="p-1 border h-24 shadow-md inline-flex rounded-lg mx-3"></a>
+                                    class="p-1 border h-24 shadow-md inline-flex rounded-lg lg:mx-3"></a>
                             <a href="https://tejkunitsolutions.com/"><img src="./assets/images/brand-logos/7.png" alt=""
-                                    class="p-1 border h-24 shadow-md inline-flex rounded-lg mx-3"></a>
+                                    class="p-1 border h-24 shadow-md inline-flex rounded-lg lg:mx-3"></a>
                             <a href="https://rummyspark.in/"><img src="./assets/images/brand-logos/6.png" alt=""
-                                    class="p-1 border h-24 shadow-md inline-flex rounded-lg mx-3 bg-gray-500"></a>
+                                    class="p-1 border h-24 shadow-md inline-flex rounded-lg lg:mx-3 bg-gray-500"></a>
                             <a href="https://turbopaisa.com/"><img src="./assets/images/brand-logos/8.png" alt=""
-                                    class="p-1 border h-24 shadow-md inline-flex rounded-lg mx-3 bg-gray-500"></a>
+                                    class="p-1 border h-24 shadow-md inline-flex rounded-lg lg:mx-3 bg-gray-500"></a>
                             <a href="https://salesera.net/"><img src="./assets/images/brand-logos/9.png" alt=""
-                                    class="p-1 border h-24 shadow-md inline-flex rounded-lg mx-3 "></a>
+                                    class="p-1 border h-24 shadow-md inline-flex rounded-lg lg:mx-3 "></a>
 
                         </div>
 
