--- a/src/contact.html
+++ b/src/contact.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sunil Kumar | Projects</title>
+    <title>Sunil Kumar | Contact</title>
     <link href="./output.css" rel="stylesheet">
     <link rel="stylesheet" href="./assets/custom.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -19,6 +19,13 @@
     <style>
         .custom-font {
             font-family: "Lexend", sans-serif;
+        }
+
+        @media screen and (max-width: 768px) {
+            main>div {
+                justify-content: center;
+                align-items: center;
+            }
         }
     </style>
 
@@ -76,7 +83,8 @@
     </header>
 
     <main class="container mx-auto my-6 lg:h-[92vh] lg:overflow-hidden">
-        <div class="grid grid-cols-1 lg:grid-cols-3 gap-6 h-full">
+        <div
+            class="lg:grid flex flex-col  grid-cols-1 lg:grid-cols-3 gap-6 h-full">
             <div class="bg-white p-6 grid gap-3 shadow rounded-2xl">
                 <div class=" flex flex-col gap-6 ">
                     <img src="./assets/images/hero.jpg" class="w-full rounded-lg" alt="">
@@ -128,7 +136,7 @@
                 </div>
             </div>
             <div
-                class=" grid border rounded-2xl grid-rows-2 col-span-2 gap-6 lg:overflow-y-scroll overflow-x-hidden overflow-y-scroll [&::-webkit-scrollbar]:w-1 [&::-webkit-scrollbar-track]:rounded-full [&::-webkit-scrollbar-track]:bg-gray-100 [&::-webkit-scrollbar-thumb]:rounded-full [&::-webkit-scrollbar-thumb]:bg-gray-300">
+                class=" grid border rounded-2xl col-span-2 gap-6 lg:overflow-y-scroll overflow-x-hidden overflow-y-scroll [&::-webkit-scrollbar]:w-1 [&::-webkit-scrollbar-track]:rounded-full [&::-webkit-scrollbar-track]:bg-gray-100 [&::-webkit-scrollbar-thumb]:rounded-full [&::-webkit-scrollbar-thumb]:bg-gray-300">
                 <div class="bg-white p-6 gap-6 grid h-fit rounded-2xl">
                     <div class="flex flex-col-reverse items-start gap-6 lg:flex-row lg:gap-10">
                         <div class="">
@@ -146,9 +154,9 @@
                         </div>
                     </div>
                     <div class="w-full flex flex-wrap gap-3">
-                        <button class="lg:p-1 h-11 w-40 border border-black shadow p-2  text-lg rounded-md"
+                        <button class="lg:p-1 h-11 w-full lg:w-40 border border-black shadow p-2  text-lg rounded-md"
                             type="button"> <i class="bi bi-telephone-fill px-1 text-gray-900"></i> 8790549591</button>
-                        <button class="lg:p-1 h-11 w-40 bg-gray-900 text-white border shadow-sm p-2 text-lg rounded-md"
+                        <button class="lg:p-1 h-11 w-full lg:w-40 bg-gray-900 text-white border shadow-sm p-2 text-lg rounded-md"
                             type="button"><i class="bi bi-envelope-fill px-1 text-white"></i>
                             Copy Mail</button>
                     </div>
