--- a/src/index.html
+++ b/src/index.html
@@ -51,7 +51,7 @@
           <span class="sr-only">Toggle</span>
         </button>
         <button type="button"
-          class="py-2 px-8 inline-flex items-center gap-x-2 text-base font-medium rounded-lg border border-gray-200 bg-white text-gray-800 shadow-sm hover:bg-gray-50 focus:outline-none focus:bg-gray-50 disabled:opacity-50 disabled:pointer-events-none dark:bg-neutral-800 dark:border-neutral-700 dark:text-white dark:hover:bg-neutral-700 dark:focus:bg-neutral-700">
+          class="py-2 px-8 inline-flex contact_location items-center contact_location gap-x-2 text-base font-medium rounded-lg border border-gray-200 bg-white text-gray-800 shadow-sm hover:bg-gray-50 focus:outline-none focus:bg-gray-50 disabled:opacity-50 disabled:pointer-events-none dark:bg-neutral-800 dark:border-neutral-700 dark:text-white dark:hover:bg-neutral-700 dark:focus:bg-neutral-700">
           Hire Me
         </button>
       </div>
@@ -86,11 +86,11 @@
           </div>
           <div class="flex gap-2">
             <button
-              class="lg:w-6/12 lg:p-1 h-14 w-11/12 border items-center justify-center flex gap-1 shadow-sm p-2 text-lg font-semibold rounded-md"
+              class="lg:w-6/12 lg:p-1 h-14 w-11/12 border contact_location items-center justify-center flex gap-1 shadow-sm p-2 text-lg font-semibold rounded-md"
               type="button">Hire
               me <span class="material-symbols-outlined">message</span> </button>
             <button
-              class="lg:w-6/12 lg:p-1 h-14 w-11/12 bg-blue-500 text-white border items-center justify-center flex gap-1 shadow-sm p-2 text-lg font-semibold rounded-md"
+              class="lg:w-6/12 lg:p-1 h-14 w-11/12 bg-blue-500 text-white border resume_download items-center justify-center flex gap-1 shadow-sm p-2 text-lg font-semibold rounded-md"
               type="button">Resume <span class="material-symbols-outlined">download</span> </button>
           </div>
           <div class="flex gap-3">
@@ -297,49 +297,49 @@
         <div class="grid items-start gap-3 overflow-hidden">
           <div class="flex flex-wrap items-center justify-between gap-2">
             <h3 class="text-2xl font-semibold dark:text-light custom-font">Services</h3>
-            <a href="portfolio.html"
+            <a href="contact.html"
               class="inline-flex items-center justify-center gap-2 border-b text-center text-base text-primary transition hover:border-b-primary dark:border-b-muted dark:hover:border-b-primary">
               <span>Hire me</span>
               <span class="material-symbols-outlined">arrow_forward</span>
             </a>
             <div class="grid gap-3 w-full mt-3">
               <div
-                class="flex justify-between items-center justify-center border-b py-2 text-lg hover:text-xl hover:text-blue-500">
-                <p class=" ">UI/UX Designing</p>
+                class="flex justify-between items-center justify-center border-b py-2 text-lg hover:text-xl service_li hover:text-blue-500">
+                <p class="">UI/UX Designing</p>
                 <span class="material-symbols-outlined">north_east</span>
               </div>
               <div
-                class="flex justify-between items-center justify-center border-b py-2 text-lg hover:text-xl hover:text-blue-500">
+                class="flex justify-between items-center justify-center border-b py-2 text-lg hover:text-xl service_li hover:text-blue-500">
                 <p class="  ">Branding</p>
                 <span class="material-symbols-outlined">north_east</span>
               </div>
               <div
-                class="flex justify-between items-center justify-center border-b py-2 text-lg hover:text-xl hover:text-blue-500">
+                class="flex justify-between items-center justify-center border-b py-2 text-lg hover:text-xl service_li hover:text-blue-500">
                 <p class="  ">Web Development</p>
                 <span class="material-symbols-outlined">north_east</span>
               </div>
               <div
-                class="flex justify-between items-center justify-center border-b py-2 text-lg hover:text-xl hover:text-blue-500">
+                class="flex justify-between items-center justify-center border-b py-2 text-lg hover:text-xl service_li hover:text-blue-500">
                 <p class="  ">Graphic Designing</p>
                 <span class="material-symbols-outlined">north_east</span>
               </div>
               <div
-                class="flex justify-between items-center justify-center border-b py-2 text-lg hover:text-xl hover:text-blue-500">
+                class="flex justify-between items-center justify-center border-b py-2 text-lg hover:text-xl service_li hover:text-blue-500">
                 <p class="  ">Video Editing</p>
                 <span class="material-symbols-outlined">north_east</span>
               </div>
               <div
-                class="flex justify-between items-center justify-center border-b py-2 text-lg hover:text-xl hover:text-blue-500">
+                class="flex justify-between items-center justify-center border-b py-2 text-lg hover:text-xl service_li hover:text-blue-500">
                 <p class="  ">Mobile App Development</p>
                 <span class="material-symbols-outlined">north_east</span>
               </div>
               <div
-                class="flex justify-between items-center justify-center border-b py-2 text-lg hover:text-xl hover:text-blue-500">
+                class="flex justify-between items-center justify-center border-b py-2 text-lg hover:text-xl service_li hover:text-blue-500">
                 <p class="  ">2D Illustration Works</p>
                 <span class="material-symbols-outlined">north_east</span>
               </div>
               <div
-                class="flex justify-between items-center justify-center border-b py-2 text-lg hover:text-xl hover:text-blue-500">
+                class="flex justify-between items-center justify-center border-b py-2 text-lg hover:text-xl service_li hover:text-blue-500">
                 <p class="  ">UI Developement</p>
                 <span class="material-symbols-outlined">north_east</span>
               </div>
@@ -451,7 +451,19 @@
     </div>
   </main>
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-
+  <script>
+    $(document).ready(function () {
+      $('.service_li').on('click', function () {
+        window.location.href = 'contact.html';
+      });
+      $('.contact_location').on('click', function () {
+        window.location.href = 'contact.html';
+      });
+      $('.resume_download').on('click', function () { 
+        window.open('./assets/resume.pdf', '_blank');
+      });
+    });
+  </script>
 </body>
 
 </html>
