--- a/src/projects.html
+++ b/src/projects.html
@@ -70,8 +70,8 @@
                 <div class="flex flex-col gap-5 mt-5 sm:flex-row sm:items-center sm:mt-0 custom-font sm:ps-5 ">
                     <a class="font-medium text-lg text-gray-400 hover:text-gray-600 focus:text-gray-400 focus:outline-none "
                         href="index.html" aria-current="page">Home</a>
-                    <a class="font-medium text-lg   text-blue-500  focus:outline-none" href="about.html">About</a>
-                    <a class="font-medium text-lg text-gray-400 hover:text-gray-600 focus:outline-none focus:text-gray-400"
+                    <a class="font-medium text-lg    text-gray-400 hover:text-gray-600 focus:text-gray-400 focus:outline-none" href="about.html">About</a>
+                    <a class="font-medium text-lg text-blue-500 focus:outline-none "
                         href="projects.html">Projects</a>
                     <a class="font-medium text-lg text-gray-400 hover:text-gray-600 focus:outline-none focus:text-gray-400"
                         href="contact.html">Contact</a>
